# maastrichtDeprisk

./: .gitignore  .python-version  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-azure.yml
V2/: pyproject.toml
V2/src/: data_ingest_server.py  feature_engineering_interactions.py  qa_feature_files.py  train_xgb_server.py
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/lib/: feature_engineering_interactions.py
api/models/: Week8_xgb_onehot_interactions.joblib
data/: deprisk_synth_6004.csv
models/: Week7_xgb_onehot_interactions.joblib  Week8_xgb_onehot_interactions.meta.json
src/: feature_engineering_server.py  train_xgb_server.py
src/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/catboost_info/learn/: events.out.tfevents
src/experiments/: imbalance_utils.py  test_setup.py  train_cat_xgb_server.py  train_models_server.py  train_xgb_ensemble.py  train_xgb_improved.py
src/production/: data_ingest_server.py  feature_engineering_server.py  prediction_features.py
web/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: page.tsx
web/src/app/api-docs/: page.tsx
web/src/app/api/score/: route.ts
web/src/app/model/: page.tsx
web/src/app/powerbi/: page.tsx
web/src/app/predict/: page.tsx
web/src/components/: site-header.tsx
web/src/components/ui/: tooltip.tsx
