[project]
name = "deprisk-api"
version = "0.1.0"
description = "Maastricht Depression-Risk Inference API"
authors = [
    {name = "mkia",email = "mehdimx@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (==1.6.1)",
    "xgboost (>=3.0.3,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pyreadstat (>=1.3.0,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "optuna (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
